--- a/sandbox/views/changepage.xml
+++ b/sandbox/views/changepage.xml
@@ -5,25 +5,25 @@
              xmlns:import="pyviews.modifiers.core.import_global"
              xmlns:bind="pyviews.modifiers.core.bind"
              xmlns:grid="pyviews.modifiers.widget.grid"
-             import:show_view="pyviews.application.show_view"
+             import:show_view="commands.show_view"
              import:tk="tkinter">
     <tk:Button grid:row="0"
                grid:column="0"
-               bind:Button-1="{lambda:show_view('messagebox')}">
+               bind:Button-1="{lambda:show_view(self, 'messagebox')}">
         Message box
     </tk:Button>
 
     <tk:Button grid:row="0"
                grid:column="1"
                grid:sticky="e"
-               bind:Button-1="{lambda:show_view('counter')}">
+               bind:Button-1="{lambda:show_view(self, 'counter')}">
         Counter
     </tk:Button>
 
     <tk:Button grid:row="0"
                grid:column="2"
                grid:sticky="e"
-               bind:Button-1="{lambda:show_view('scroll')}">
+               bind:Button-1="{lambda:show_view(self, 'scroll')}">
         Scroll
     </tk:Button>
 </c:Container>
