--- a/sandbox/views/scroll.xml
+++ b/sandbox/views/scroll.xml
@@ -12,9 +12,7 @@
                 view_model='{ScrollVm()}'
                 node_id='scroll_id'>
     <cs:For items='{items}'>
-        <tk:Label geometry='{Pack(fill="x")}'
-                  node_id='{parent.get_node_id(index)}'
-                  bind:Button-1='{lambda: parent.scroll_to(index)}'>
+        <tk:Label geometry='{Pack(fill="x")}'>
             asdasdf
         </tk:Label>
     </cs:For>
