--- a/sandbox/views/app.xml
+++ b/sandbox/views/app.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0"?>
-<core:App xmlns:core="pyviews.view.core"
-          xmlns:style="pyviews.view.style"
-          xmlns:cs="pyviews.view.containers"
-          xmlns:tk='tkinter'
-          xmlns:import='pyviews.modifiers.import_global'
+<w:Root xmlns='tkinter'
+        xmlns:w="pyviews.tk.widgets"
+        xmlns:import='pyviews.core.modifiers.import_global'
+        xmlns:bind='pyviews.tk.modifiers.bind'
 
-          import:AppViewModel='view_model.AppViewModel'
-          import:Pack='pyviews.view.geometry.PackGeometry'
+        import:AppViewModel='view_model.AppViewModel'
+        import:Pack='pyviews.tk.geometry.PackGeometry'
+        import:show_message='commands.show_message'
 
-          background="white"
-          state="zoomed"
-          view_model='{AppViewModel("counter")}'>
-    <style:Styles path='styles' />
-    
-    <tk:Frame geometry='{Pack(fill="x")}'>
-        <cs:View path='changepage' />
-    </tk:Frame>
-    <cs:If true='{vm.view}'>
-        <tk:Frame geometry='{Pack(fill="both", expand=True)}'>
-            <cs:View path='{vm.view}' />
-        </tk:Frame>
-    </cs:If>
-
-</core:App>
+        background="white"
+        state="zoomed"
+        view_model='{AppViewModel("counter")}'>
+    <Button geometry='{Pack(fill="x")}'
+            text='show message'
+            bind:Button-1="{lambda e:show_message('message title', 'hohohoho')}">
+    </Button>
+</w:Root>
