--- a/sandbox/views/app.xml
+++ b/sandbox/views/app.xml
@@ -10,9 +10,6 @@
 
         background="white"
         state="zoomed"
-        view_model='{AppViewModel("counter")}'>
-    <Button geometry='{Pack(fill="x")}'
-            text='show message'
-            bind:Button-1="{lambda e:show_message('message title', 'hohohoho')}">
-    </Button>
+        view_model='{AppViewModel("messagebox")}'>
+        <w:View name='{vm.view}' />
 </w:Root>
