--- a/sandbox/views/messagebox.xml
+++ b/sandbox/views/messagebox.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
-<core:Container xmlns:tk="tkinter"
-                xmlns:core="pyviews.view.core"
-                xmlns:import="pyviews.modifiers.import_global"
-                xmlns:bind="pyviews.modifiers.bind"
-                
-                import:Pack='pyviews.view.geometry.PackGeometry'
-                import:show_message="sandbox.commands.show_message">
-    <tk:Button  geometry='{Pack(fill="x")}'
-                bind:Button-1="{lambda:show_message('message title', 'hohohoho')}">
-        show message
-    </tk:Button>
-</core:Container>
+<w:Container xmlns='tkinter'
+        xmlns:w="pyviews.tk.widgets"
+        xmlns:import='pyviews.core.modifiers.import_global'
+        xmlns:bind='pyviews.tk.modifiers.bind'
+
+        import:Pack='pyviews.tk.geometry.PackGeometry'
+        import:show_message='commands.show_message'>
+    <Button geometry='{Pack(fill="x")}'
+            text='show message'
+            bind:Button-1="{lambda e:show_message('message title', 'hohohoho')}">
+    </Button>
+</w:Container>
