--- a/sandbox/views/counter.xml
+++ b/sandbox/views/counter.xml
@@ -6,6 +6,7 @@
 
                 import:Counter="sandbox.counter.Counter"
                 import:Grid='pyviews.tk.geometry.GridGeometry'
+                import:to_int='pyviews.core.converters.to_int'
 
                 view_model="{Counter()}">
 
@@ -15,7 +16,7 @@
     </Button>
 
     <Entry geometry="{Grid(0, 1)}"
-           text='{int{vm.count}}'>
+           text='{to_int{vm.count}}'>
     </Entry>
 
     <Label geometry="{Grid(0, 2)}"
@@ -27,7 +28,7 @@
         <!-- <RowConfig row='0' weight='1' />
         <ColConfig col='0' weight='1' /> -->
         <Frame geometry='{Grid(0, 0)}'>
-            <w:For items='{range(vm.count)}'>
+            <w:For items='{range(0 if vm.count is None else vm.count)}'>
                 <Label geometry='{Grid(index, index)}'>
                     {str(item+1) + ' ' + str(index)}
                 </Label>
