--- a/sandbox/views/counter.xml
+++ b/sandbox/views/counter.xml
@@ -4,6 +4,7 @@
                 xmlns:s="pyviews.tk.styles"
                 xmlns:import="pyviews.core.modifiers.import_global"
                 xmlns:bind="pyviews.tk.modifiers.bind"
+                xmlns:g="pyviews.tk.geometry"
 
                 import:Counter="sandbox.counter.Counter"
                 import:Grid='pyviews.tk.geometry.GridGeometry'
@@ -30,8 +31,8 @@
     </Label>
 
     <Frame geometry='{Grid(1, 0, columnspan=3)}'>
-        <!-- <RowConfig row='0' weight='1' />
-        <ColConfig col='0' weight='1' /> -->
+        <g:Row index='{0}' weight='{1}' />
+        <g:Column index='{0}' weight='{1}' />
         <Frame geometry='{Grid(0, 0)}'>
             <w:For items='{vm.range}'>
                 <Label geometry='{Grid(index, index)}'
