--- a/sandbox/views/changepage.xml
+++ b/sandbox/views/changepage.xml
@@ -6,17 +6,17 @@
              
              import:Grid='pyviews.tk.geometry.GridGeometry'
              import:show_view='sandbox.commands.show_view'>
-    <Button geometry='{Grid(0, 0, sticky="e")}'
+    <Button geometry='{Grid(row=0, column=0, sticky="e")}'
                bind:Button-1="{lambda e: show_view(vm, 'messagebox')}">
         Message box
     </Button>
 
-    <Button geometry='{Grid(0, 1, sticky="e")}'
+    <Button geometry='{Grid(row=0, column=1, sticky="e")}'
                bind:Button-1="{lambda e: show_view(vm, 'counter')}">
         Counter
     </Button>
 
-    <Button geometry='{Grid(0, 2, sticky="e")}'
+    <Button geometry='{Grid(row=0, column=2, sticky="e")}'
                bind:Button-1="{lambda e: show_view(vm, 'scroll')}">
         Scroll
     </Button>
