--- a/sandbox/views/counter.xml
+++ b/sandbox/views/counter.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0"?>
 <w:Container xmlns="tkinter"
-             xmlns:w="pyviews.tk.widgets"
-             xmlns:s="pyviews.tk.styles"
+             xmlns:w="pyviews.tk"
              xmlns:import="pyviews.core.modifiers.import_global"
              xmlns:bind="pyviews.tk.modifiers.bind"
-             xmlns:g="pyviews.tk.geometry"
 
              import:Counter="sandbox.counter.Counter"
              import:Grid='pyviews.tk.geometry.GridGeometry'
@@ -13,7 +11,7 @@
 
              view_model="{Counter()}">
 
-    <s:Styles name='styles'/>
+    <w:Styles name='styles'/>
 
     <Frame geometry='{Pack(fill="x")}'>
         <Button geometry='{Pack(side="left")}'
@@ -34,8 +32,8 @@
     </Frame>
 
     <Frame geometry='{Pack(anchor="nw", side="left")}'>
-        <g:Row index='{0}' weight='{1}' />
-        <g:Column index='{0}' weight='{1}' />
+        <w:Row index='{0}' weight='{1}' />
+        <w:Column index='{0}' weight='{1}' />
         <Frame geometry='{Grid(row=0, column=0)}'
                background='white'>
             <w:For items='{vm.range}'>
