--- a/sandbox/views/app.xml
+++ b/sandbox/views/app.xml
@@ -15,17 +15,17 @@
         view_model='{AppViewModel("")}'>
         <Frame geometry='{Pack(fill="x")}'>
                 <Button geometry='{Grid(row=0, column=0, sticky="e")}'
-                        bind:Button-1="{lambda e: show_view(vm, 'messagebox')}">
+                        bind:Button-1="once:{lambda e: show_view(vm, 'messagebox')}">
                         Message box
                 </Button>
 
                 <Button geometry='{Grid(row=0, column=1, sticky="e")}'
-                        bind:Button-1="{lambda e: show_view(vm, 'counter')}">
+                        bind:Button-1="once:{lambda e: show_view(vm, 'counter')}">
                         Counter
                 </Button>
 
                 <Button geometry='{Grid(row=0, column=2, sticky="e")}'
-                        bind:Button-1="{lambda e: show_view(vm, 'scroll')}">
+                        bind:Button-1="once:{lambda e: show_view(vm, 'scroll')}">
                         Scroll
                 </Button>
         </Frame>
