--- a/sandbox/views/messagebox.xml
+++ b/sandbox/views/messagebox.xml
@@ -8,6 +8,6 @@
         import:show_message='commands.show_message'>
     <Button geometry='{Pack(fill="x")}'
             text='show message'
-            bind:Button-1="{lambda e:show_message('message title', 'hohohoho')}">
+            bind:Button-1="once:{lambda e:show_message('message title', 'hohohoho')}">
     </Button>
 </w:Container>
